# v4.0.0 (2019-09-xx)

##  Enhancements

*  Add verbose option (#21)

   The verbose option ("-verbose") print the file that being scanned.
   For file that is being added (either with include option or not) it will
   print the path prefixed with "+", and for file that is ignored it will
   print the path prefixed with "-".

   The last line will print the name of generated Go file.


# v3.4.0 (2018-05-19)

Linting task and dependencies is removed from make task. Linting should be
decoupled from any library or repository. It is a tool that not affected the
build, but help on detect bugs or analyze code.

## Enhancements

* @rsc: balance backquoted string concatenation
* Emad Elsaid: Remove duplicate words on README

## Bug Fixes

* @fgrosse: Fix using symbolic links


# v3.3.0 (2017-11-07)

This release is contain major internal refactoring on scanning the file system.

## Enhancements

* Check error and return it

  There are many place where error from file create, write, and close was not
  checked. With the help of tools, all error was checked and returned to the
  caller.

* Move generated content (template) to its own file

  Since we generate go code, the template become noise because its inlined
  with the generator itself, which make the code unreadable. This commit
  split and move the content of generated to its own file `template.go`.

* Refactoring the file scanner

  There are several problems in old file system scanner,

  * It's unreadable.  It's hard to read what the code do from the start
    until the end, which make it even harder to write new function/feature.

  * Each input file is converted to absolute path to handle symlink
    files and/or directory which cause additional process. The new scanner
    work with relative path only.

## Bug Fixes

* @joerocklin: Add the proper 'DO NOT EDIT' tag on file assets
* @komuw: update installation with the right location


# v3.2.0 (2017-11-07)

## New Features
